@@ -16,20 +16,13 @@
  *  specific language governing permissions and limitations
  *  under the License.
  ****************************************************************/
-package org.apache.cayenne.gen;
 
-import org.apache.cayenne.di.Binder;
-import org.apache.cayenne.di.Module;
-import org.apache.cayenne.gen.xml.CgenExtension;
-import org.apache.cayenne.project.ProjectModule;
+package org.apache.cayenne.tools;
+
+import org.apache.cayenne.di.spi.ModuleProvider;
 
 /**
- * @since 4.1
+ * @since 4.2
  */
-public class CgenModule implements Module{
-    @Override
-    public void configure(Binder binder) {
-        binder.bind(ClassGenerationActionFactory.class).to(DefaultClassGenerationActionFactory.class);
-        ProjectModule.contributeExtensions(binder).add(CgenExtension.class);
-    }
+public interface CayenneToolsModuleProvider extends ModuleProvider {
 }
