@@ -19,6 +19,13 @@
 
 package org.apache.cayenne.gen;
 
+import java.io.File;
+import java.io.StringWriter;
+import java.io.Writer;
+import java.util.ArrayList;
+import java.util.Collection;
+import java.util.List;
+
 import org.apache.cayenne.map.CallbackDescriptor;
 import org.apache.cayenne.map.DataMap;
 import org.apache.cayenne.map.ObjAttribute;
@@ -28,13 +35,6 @@ import org.apache.cayenne.map.QueryDescriptor;
 import org.junit.After;
 import org.junit.Before;
 import org.junit.Test;
-
-import java.io.File;
-import java.io.StringWriter;
-import java.io.Writer;
-import java.util.ArrayList;
-import java.util.Collection;
-import java.util.List;
 
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertFalse;
@@ -54,7 +54,7 @@ public class ClassGenerationActionTest {
 	public void setUp() throws Exception {
 		writers = new ArrayList<>(3);
 		cgenConfiguration = new CgenConfiguration();
-		action = new ClassGenerationAction(cgenConfiguration) {
+		action = new ClassGenerationAction() {
 
 			@Override
 			protected Writer openWriter(TemplateType templateType) throws Exception {
@@ -63,6 +63,7 @@ public class ClassGenerationActionTest {
 				return writer;
 			}
 		};
+		action.setCgenConfiguration(cgenConfiguration);
 	}
 
 	@After
@@ -216,7 +217,7 @@ public class ClassGenerationActionTest {
 
 		if (isClient) {
 
-			action = new ClientClassGenerationAction(cgenConfiguration) {
+			action = new ClientClassGenerationAction() {
 				@Override
 				protected Writer openWriter(TemplateType templateType) throws Exception {
 					StringWriter writer = new StringWriter();
@@ -225,7 +226,7 @@ public class ClassGenerationActionTest {
 				}
 
 			};
-
+			action.setCgenConfiguration(cgenConfiguration);
 		}
 
 		cgenConfiguration.setMakePairs(true);
