@@ -19,15 +19,16 @@
 
 package org.apache.cayenne.tools;
 
+import java.io.File;
+
 import org.apache.cayenne.configuration.xml.DataChannelMetaData;
 import org.apache.cayenne.dbsync.filter.NamePatternMatcher;
 import org.apache.cayenne.dbsync.reverse.configuration.ToolsModule;
-import org.apache.cayenne.di.DIBootstrap;
 import org.apache.cayenne.di.Injector;
 import org.apache.cayenne.gen.ArtifactsGenerationMode;
 import org.apache.cayenne.gen.CgenConfiguration;
-import org.apache.cayenne.gen.CgenModule;
 import org.apache.cayenne.gen.ClassGenerationAction;
+import org.apache.cayenne.gen.ClassGenerationActionFactory;
 import org.apache.cayenne.gen.ClientClassGenerationAction;
 import org.apache.cayenne.map.DataMap;
 import org.apache.maven.plugin.AbstractMojo;
@@ -38,8 +39,6 @@ import org.apache.maven.plugins.annotations.Mojo;
 import org.apache.maven.plugins.annotations.Parameter;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
-
-import java.io.File;
 
 /**
  * Maven mojo to perform class generation from data cgenConfiguration. This class is an Maven
@@ -236,7 +235,9 @@ public class CayenneGeneratorMojo extends AbstractMojo {
 		// TODO: (KJM 11/2/06) The destDir really should be added as a
 		// compilation resource for maven.
 
-		injector = DIBootstrap.createInjector(new CgenModule(), new ToolsModule(LoggerFactory.getLogger(CayenneGeneratorMojo.class)));
+		injector = new ToolsInjectorBuilder()
+				.addModule(new ToolsModule(LoggerFactory.getLogger(CayenneGeneratorMojo.class)))
+				.create();
 
 		Logger logger = new MavenLogger(this);
 		CayenneGeneratorMapLoaderAction loaderAction = new CayenneGeneratorMapLoaderAction(injector);
@@ -305,11 +306,7 @@ public class CayenneGeneratorMojo extends AbstractMojo {
 	 */
 	private ClassGenerationAction createGenerator(DataMap dataMap) {
 		CgenConfiguration cgenConfiguration = buildConfiguration(dataMap);
-		ClassGenerationAction classGenerationAction = cgenConfiguration.isClient() ? new ClientClassGenerationAction(cgenConfiguration) :
-				new ClassGenerationAction(cgenConfiguration);
-		injector.injectMembers(classGenerationAction);
-
-		return classGenerationAction;
+		return injector.getInstance(ClassGenerationActionFactory.class).createAction(cgenConfiguration);
 	}
 
 	private CgenConfiguration buildConfiguration(DataMap dataMap) {
