@@ -16,6 +16,7 @@ Changes/New Features:
 CAY-2467 New type-aware Property API
 CAY-2507 Property API to use path aliases
 CAY-2508 Create api to add aliases in expressions
+CAY-2510 Create builder to load custom modules into plugins and modeler
 
 Bug Fixes:
 
